--- a/code.html
+++ b/code.html
@@ -53,7 +53,7 @@
 
     <!-- BOTÓN FLOTANTE DE WHATSAPP -->
     <a class="fixed bottom-8 right-8 z-[100] bg-whatsapp text-white p-4 rounded-full shadow-2xl hover:scale-110 transition-transform flex items-center justify-center group"
-        href="https://wa.me/#">
+        href="https://wa.me/573118962973">
         <span class="material-symbols-outlined text-3xl">chat</span>
         <span
             class="max-w-0 overflow-hidden group-hover:max-w-xs transition-all duration-500 whitespace-nowrap ml-0 group-hover:ml-2 font-bold">¡Pide
@@ -102,7 +102,8 @@
                 </nav>
                 <div class="flex items-center gap-3">
                     <a class="flex items-center justify-center size-10 rounded-full transition-all hover:scale-110 bg-whatsapp text-white"
-                        href="#"><span class="material-symbols-outlined text-[20px]">chat</span></a>
+                        href="https://wa.me/573118962973"><span
+                            class="material-symbols-outlined text-[20px]">chat</span></a>
                     <a class="flex items-center justify-center size-10 rounded-full transition-all hover:scale-110 bg-facebook text-white"
                         href="#"><span class="material-symbols-outlined text-[20px]">social_leaderboard</span></a>
                     <a class="flex items-center justify-center size-10 rounded-full transition-all hover:scale-110 bg-instagram text-white"
@@ -130,7 +131,7 @@
                         </p>
                         <div class="flex flex-col sm:flex-row items-center gap-4 justify-center lg:justify-start">
                             <a class="flex items-center justify-center gap-3 bg-whatsapp text-white px-8 py-4 rounded-xl font-bold text-lg hover:scale-105 transition-transform shadow-xl shadow-whatsapp/20 w-full sm:w-auto"
-                                href="#">
+                                href="https://wa.me/573118962973">
                                 <span class="material-symbols-outlined">chat</span>
                                 WhatsApp Ahora
                             </a>
@@ -404,7 +405,7 @@
                     </div>
                     <div class="flex items-center gap-8">
                         <a class="text-gray-400 hover:text-whatsapp transition-colors flex flex-col items-center gap-1"
-                            href="#">
+                            href="https://wa.me/573118962973">
                             <span class="material-symbols-outlined">chat</span>
                             <span class="text-[10px] font-bold uppercase tracking-tighter">WhatsApp</span>
                         </a>
