--- a/code.html
+++ b/code.html
@@ -63,9 +63,9 @@
 
         <!-- HEADER Y NAVEGACIÓN -->
         <header class="w-full bg-white/95 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
-            <div class="max-w-[1200px] mx-auto px-6 h-32 flex items-center justify-between">
+            <div class="max-w-[1200px] mx-auto px-6 h-20 lg:h-32 flex items-center justify-between">
                 <div class="flex items-center gap-8">
-                    <div class="h-24 w-auto flex items-center">
+                    <div class="h-16 lg:h-24 w-auto flex items-center">
                         <svg class="h-full w-auto" preserveAspectRatio="xMidYMid meet" viewBox="0 0 100 80"
                             xmlns="http://www.w3.org/2000/svg">
                             <path d="M5 40 Q 15 25, 35 45 Q 20 40, 10 60 Q 25 50, 40 60 Q 25 55, 15 75" fill="#e01f1f">
@@ -82,12 +82,16 @@
                         </svg>
                     </div>
                     <div class="flex flex-col">
-                        <h1 class="text-3xl font-black tracking-tight text-gray-900 leading-none">Interrapidísimo El
+                        <h1 class="text-xl lg:text-3xl font-black tracking-tight text-gray-900 leading-none">
+                            Interrapidísimo El
                             Claret</h1>
-                        <p class="text-sm font-bold text-primary uppercase tracking-[0.15em] mt-2">Mensajería Rápida y
+                        <p
+                            class="text-[10px] lg:text-sm font-bold text-primary uppercase tracking-[0.15em] mt-1 lg:mt-2">
+                            Mensajería Rápida y
                             Confiable</p>
                     </div>
                 </div>
+                <!-- Desktop Navigation -->
                 <nav class="hidden lg:flex items-center gap-8">
                     <a class="text-sm font-semibold text-gray-700 hover:text-primary transition-colors"
                         href="#inicio">Inicio</a>
@@ -100,7 +104,7 @@
                     <a class="text-sm font-semibold text-gray-700 hover:text-primary transition-colors"
                         href="#contacto">Contacto</a>
                 </nav>
-                <div class="flex items-center gap-3">
+                <div class="hidden lg:flex items-center gap-3">
                     <a class="flex items-center justify-center size-10 rounded-full transition-all hover:scale-110 bg-whatsapp text-white"
                         href="https://wa.me/573118962973"><span
                             class="material-symbols-outlined text-[20px]">chat</span></a>
@@ -110,8 +114,44 @@
                         href="https://www.instagram.com/interrapidisimoelclaret/"><span
                             class="material-symbols-outlined text-[20px]">photo_camera</span></a>
                 </div>
+
+                <!-- Mobile Menu Button -->
+                <button id="mobile-menu-btn" class="lg:hidden p-2 text-gray-700 hover:text-primary">
+                    <span class="material-symbols-outlined text-3xl">menu</span>
+                </button>
             </div>
+
         </header>
+
+        <!-- Mobile Menu Drawer (Moved outside header) -->
+        <div id="mobile-menu"
+            class="fixed inset-0 z-[60] bg-white transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col pt-24 px-6 gap-6">
+            <!-- Close Button -->
+            <button id="close-menu-btn" class="absolute top-6 right-6 p-2 text-gray-700 hover:text-primary">
+                <span class="material-symbols-outlined text-3xl">close</span>
+            </button>
+
+            <a class="text-xl font-bold text-gray-900 border-b border-gray-100 pb-4" href="#inicio"
+                onclick="closeMenu()">Inicio</a>
+            <a class="text-xl font-bold text-gray-900 border-b border-gray-100 pb-4" href="#proceso"
+                onclick="closeMenu()">¿Cómo funciona?</a>
+            <a class="text-xl font-bold text-gray-900 border-b border-gray-100 pb-4" href="#servicios"
+                onclick="closeMenu()">Servicios</a>
+            <a class="text-xl font-bold text-gray-900 border-b border-gray-100 pb-4" href="#cobertura"
+                onclick="closeMenu()">Cobertura</a>
+            <a class="text-xl font-bold text-gray-900 border-b border-gray-100 pb-4" href="#contacto"
+                onclick="closeMenu()">Contacto</a>
+
+            <div class="flex items-center justify-center gap-6 mt-4">
+                <a class="flex items-center justify-center size-12 rounded-full bg-whatsapp text-white shadow-lg"
+                    href="https://wa.me/573118962973"><span class="material-symbols-outlined text-2xl">chat</span></a>
+                <a class="flex items-center justify-center size-12 rounded-full bg-facebook text-white shadow-lg"
+                    href="#"><span class="material-symbols-outlined text-2xl">social_leaderboard</span></a>
+                <a class="flex items-center justify-center size-12 rounded-full bg-instagram text-white shadow-lg"
+                    href="https://www.instagram.com/interrapidisimoelclaret/"><span
+                        class="material-symbols-outlined text-2xl">photo_camera</span></a>
+            </div>
+        </div>
 
         <!-- SECCIÓN HERO (INICIO) -->
         <section class="relative overflow-hidden bg-white pt-16 pb-24" id="inicio">
@@ -121,10 +161,10 @@
                         <span
                             class="inline-block px-4 py-2 rounded-full bg-red-50 text-primary font-bold text-sm mb-6 uppercase tracking-wider">Servicio
                             Express Bogotá</span>
-                        <h1 class="text-5xl lg:text-7xl font-black text-gray-900 leading-[1.1] mb-6">
+                        <h1 class="text-4xl lg:text-7xl font-black text-gray-900 leading-[1.1] mb-6">
                             Recogidas <span class="text-primary">gratuitas</span> en domicilio
                         </h1>
-                        <p class="text-xl text-gray-600 mb-10 leading-relaxed max-w-2xl mx-auto lg:mx-0">
+                        <p class="text-lg lg:text-xl text-gray-600 mb-10 leading-relaxed max-w-2xl mx-auto lg:mx-0">
                             ¿Necesitas enviar un paquete? Lo recogemos en la puerta de tu casa u oficina con nuestra
                             flota de mensajería urbana. Solo solicita tu servicio con un mínimo de <strong
                                 class="text-gray-900 font-bold">1 hora de anticipación</strong>.
@@ -435,6 +475,25 @@
         </footer>
     </div>
 
+</body>
+
+<!-- SCRIPT MENU MOVIL -->
+<script>
+    const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+    const closeMenuBtn = document.getElementById('close-menu-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    function openMenu() {
+        mobileMenu.classList.remove('translate-x-full');
+    }
+
+    function closeMenu() {
+        mobileMenu.classList.add('translate-x-full');
+    }
+
+    mobileMenuBtn.addEventListener('click', openMenu);
+    closeMenuBtn.addEventListener('click', closeMenu);
+</script>
 </body>
 
 </html>
